# harnessapi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  docs.yml  publish.yml  sync-lockfile.yml  tests.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/.github/workflows/: deploy.yml
docs/public/: landing.css  llms-full.txt  llms.txt  robots.txt
docs/scripts/: generate-llms.mjs
docs/src/components/: SiteTitle.astro  ThemeProvider.astro
docs/src/content/docs/: index.mdx  introduction.mdx
docs/src/content/docs/concepts/: mcp.md  skill-folders.md  streaming.md
docs/src/content/docs/examples/: agentic-rag.mdx  factorial.mdx  image-captioner.mdx  summarizer.mdx  web-scraper.mdx
docs/src/content/docs/guides/: claude-desktop.md  convert-skill.mdx  deploy.md  example.md  installation.md  multi-tenancy.md  quickstart.mdx
docs/src/content/docs/multi-tenancy/: admin-mcp.md  api-reference.md  index.md  preview.md  sandboxes.md  storage.md  variants.md
docs/src/content/docs/reference/: example.md  init.md  run.md
docs/src/pages/: index.astro
docs/src/styles/: custom.css  landing.css
examples/agentic-rag/: .env.example  .gitignore
examples/agentic-rag/skills/ingest/: models.py
examples/agentic-rag/skills/list_docs/: models.py
examples/agentic-rag/skills/search/: models.py
examples/agentic-rag/skills/shared/: store.py
examples/factorial_app/: main.py
examples/factorial_app/skills/factorial/: SKILL.md
harnessapi/: __init__.py  app.py  cli.py  discovery.py  edit.py  exceptions.py  routing.py  skill.py  skillcompat.py  streaming.py
harnessapi/.agents/skills/harnessapi/: SKILL.md
harnessapi/.agents/skills/harnessapi/references/: init-commands.md  mcp.md  skill-structure.md  streaming.md
harnessapi/examples/agentic-rag/: README.md  main.py  pyproject.toml
harnessapi/examples/agentic-rag/skills/ingest/: handler.py  skill.toml
harnessapi/examples/agentic-rag/skills/list_docs/: handler.py  skill.toml
harnessapi/examples/agentic-rag/skills/search/: handler.py  skill.toml
harnessapi/examples/agentic-rag/skills/shared/: context.py  embedder.py  store.py
harnessapi/examples/factorial_app/: README.md
harnessapi/examples/factorial_app/skills/factorial/: handler.py  models.py  skill.toml
harnessapi/multitenancy/: __init__.py  admin_mcp.py  backend.py  middleware.py  models.py  ops.py  registry.py  router.py  sandbox.py  sandbox_client.py  sandbox_registry.py  sandbox_runner.py  storage.py
harnessapi/multitenancy/sandbox_providers/: __init__.py  base.py  docker.py  kubernetes.py  local.py
src/harnessapi/: cli.py  decorators.py  discovery.py  exceptions.py  mcp.py  models.py  routing.py  skill.py  streaming.py
tests/: conftest.py  test_app.py  test_cli.py  test_discovery.py  test_mcp.py  test_multitenancy.py  test_streaming.py
tests/integration/: conftest.py  test_app.py  test_cli.py  test_examples.py  test_mcp.py
tests/integration/multitenancy/: conftest.py  test_admin_mcp.py  test_preview.py  test_routing.py  test_storage.py  test_variants.py
tests/skills/echo_stream/: SKILL.md  handler.py  models.py
tests/skills/greet/: SKILL.md  handler.py  models.py  skill.toml
tests/skills/skill_md_only/: SKILL.md
tests/skills/with_defaults/: handler.py  models.py
tests/skills/with_defaults/examples/: 01.json
tests/unit/: conftest.py  test_discovery.py  test_streaming.py
