[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harnessapi"
version = "0.1.0"
description = "Skill-first API framework: every endpoint is also an MCP tool"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["fastapi", "mcp", "skills", "llm", "streaming", "sse", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "anyio>=4.0.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/harnessapi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
