[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harnessapi"
version = "0.2.1"
description = "Python framework to build streaming APIs and MCP tools from skill folders"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "mcp", "model-context-protocol", "fastapi", "streaming", "sse",
    "agents", "llm", "skills", "api", "tools", "claude", "cursor",
    "server-sent-events", "agent-framework", "microservice",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "anyio>=4.0.0",
    "sse-starlette>=2.0.0",
]

[project.urls]
Homepage      = "https://github.com/edwinjosechittilappilly/harnessapi"
Documentation = "https://github.com/edwinjosechittilappilly/harnessapi#readme"
Repository    = "https://github.com/edwinjosechittilappilly/harnessapi"
Issues        = "https://github.com/edwinjosechittilappilly/harnessapi/issues"
Changelog     = "https://github.com/edwinjosechittilappilly/harnessapi/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Sandbox execution extras
sandbox = [
    "httpx>=0.27",
]
docker = [
    "httpx>=0.27",
    "docker>=7.0",
]
kubernetes = [
    "httpx>=0.27",
    "kubernetes>=29.0",
]
all-sandboxes = [
    "httpx>=0.27",
    "docker>=7.0",
    "kubernetes>=29.0",
]

[project.scripts]
harnessapi = "harnessapi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["harnessapi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests with no external I/O",
    "integration: tests that spin up HTTP servers, subprocesses, or storage backends",
]

[tool.ruff]
line-length = 100
target-version = "py311"

